ctx-demo/12-smtp4dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp4dev-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp4dev
  template:
    metadata:
      labels:
        app: smtp4dev
    spec:
      containers:
        - name: app
          image: rnwood/smtp4dev:3.1.3-ci20220418101
          ports:
            - name: smtp
              containerPort: 25
            - name: imap
              containerPort: 143
            - name: http
              containerPort: 80
