ctx-demo/12-smtp4dev/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: smtp4dev-svc
spec:
  selector:
    app: smtp4dev
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: smtp
      port: 25
      targetPort: 25
      protocol: TCP
